server-rs/check_errors.txt
    Checking server-rs v1.0.0 (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\server-rs)
warning: unused import: `Deserialize`
 --> src\routes\memory.rs:7:13
  |
7 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tower::ServiceExt`
 --> src\routes\mcp_test.rs:7:9
  |
7 |     use tower::ServiceExt; // for `oneshot`
  |         ^^^^^^^^^^^^^^^^^

warning: unused import: `post`
 --> src\routes\agent_tests.rs:4:20
  |
4 |     routing::{get, post, put},
  |                    ^^^^

warning: unused import: `std::sync::Arc`
 --> src\agent\continuity\scheduler.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `crate::state::AppState`
 --> src\agent\continuity\scheduler.rs:8:5
  |
8 | use crate::state::AppState;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Timelike`
   --> src\agent\continuity\scheduler.rs:260:36
    |
260 |             use chrono::{TimeZone, Timelike, Datelike};
    |                                    ^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\agent\memory.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused imports: `FixedSizeListArray` and `RecordBatchReader`
 --> src\agent\memory.rs:8:57
  |
8 |     RecordBatch, StringArray, Float32Array, Int64Array, FixedSizeListArray, RecordBatchReader,
  |                                                         ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\agent\mcp_tests.rs:6:9
  |
6 |     use std::path::PathBuf;
  |         ^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\agent\memory.rs:106:13
    |
106 |         let mut query = table.vector_search(query_vector)?;
    |             ----^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\agent\memory.rs:127:13
    |
127 |         let mut query = table.vector_search(query_vector)?;
    |             ----^^^^^
    |             |
    |             help: remove this `mut`

error[E0061]: this method takes 3 arguments but 4 arguments were supplied
   --> src\agent\runner\mod.rs:962:35
    |
962 |         let prompt_small = runner.build_system_prompt(&ctx, "root", "hi", "Goal").await;
    |                                   ^^^^^^^^^^^^^^^^^^^                     ------ unexpected argument #4 of type `&'static str`
    |
note: method defined here
   --> src\agent\runner\synthesis.rs:8:25
    |
  8 |     pub(crate) async fn build_system_prompt(&self, ctx: &RunContext, hierarchy_label: &str, payload_message: &str) -> String {
    |                         ^^^^^^^^^^^^^^^^^^^
help: remove the extra argument
    |
962 -         let prompt_small = runner.build_system_prompt(&ctx, "root", "hi", "Goal").await;
962 +         let prompt_small = runner.build_system_prompt(&ctx, "root", "hi").await;
    |

warning: unused import: `futures::SinkExt`
  --> src\routes\ws_tests.rs:50:9
   |
50 |     use futures::SinkExt;
   |         ^^^^^^^^^^^^^^^^

warning: unused variable: `state`
  --> src\routes\memory.rs:31:11
   |
31 |     State(state): State<Arc<AppState>>,
   |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `state`
   --> src\routes\memory.rs:105:11
    |
105 |     State(state): State<Arc<AppState>>,
    |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: value assigned to `target_value` is never read
  --> src\agent\benchmarks.rs:64:28
   |
64 |     let mut target_value = None;
   |                            ^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `name` is never read
  --> src\agent\benchmarks.rs:65:20
   |
65 |     let mut name = "".to_string();
   |                    ^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: value assigned to `category` is never read
  --> src\agent\benchmarks.rs:66:24
   |
66 |     let mut category = "".to_string();
   |                        ^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: variable does not need to be mutable
   --> src\routes\agent_tests.rs:116:10
    |
116 |     let (mut app, state) = test_app().await;
    |          ----^^^
    |          |
    |          help: remove this `mut`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:244:9
    |
244 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:375:9
    |
375 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:402:9
    |
402 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:452:9
    |
452 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `path_rs`
   --> src\utils\parser.rs:160:13
    |
160 |         let path_rs = path.with_extension("rs");
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_path_rs`

For more information about this error, try `rustc --explain E0061`.
warning: `server-rs` (bin "server-rs" test) generated 23 warnings
error: could not compile `server-rs` (bin "server-rs" test) due to 1 previous error; 23 warnings emitted
